network/vpc.tf
resource "aws_vpc" "eks_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "eks_vpc"
    Env = var.env
  }
}
